tests/baselines/reference/moduleAugmentationEnumClassMergeOfReexportIsError.errors.txt
augment.ts(4,17): error TS2567: Enum declarations can only merge with namespace or other enum declarations.
file.ts(1,14): error TS2567: Enum declarations can only merge with namespace or other enum declarations.


==== file.ts (1 errors) ====
    export class Foo {
                 ~~~
!!! error TS2567: Enum declarations can only merge with namespace or other enum declarations.
!!! related TS6203 augment.ts:4:17: 'Foo' was also declared here.
        member: string;
    }
==== reexport.ts (0 errors) ====
    export * from "./file";
==== augment.ts (1 errors) ====
    import * as ns from "./reexport";
    
    declare module "./reexport" {
        export enum Foo {
                    ~~~
!!! error TS2567: Enum declarations can only merge with namespace or other enum declarations.
!!! related TS6203 file.ts:1:14: 'Foo' was also declared here.
            A, B, C
        }
    }
    
    declare const f: ns.Foo; //is this the enum or the class? should be an error.
    